# rust-opencl

./: Cargo.toml
examples/demo/: main.rs
src/: array.rs  cl.rs  error.rs  ext.rs  hl.rs  lib.rs  mem.rs  util.rs
tests/: test.rs
