[package]
authors = ["Colin Sherratt <colin.sherratt@gmail.com>", "Eric Holk <eholk@cs.indiana.edu>", "Ian Daniher <it.daniher@gmail.com>", "Luqman Aden <me@luqman.ca>", "Milinda Pathirage <milinda.pathirage@gmail.com>", "Sébastien Crozet <developer@crozet.re>", "Mathijs Henquet <mathijs.henquet@gmail.com>"]
description = "OpenCL bindings for Rust."
keywords = ["opencl", "bindings", "ffi", "gpu", "compute"]
license = "MIT/Apache-2.0"
name = "opencl"
repository = "https://github.com/luqmana/rust-opencl"
version = "0.3.0-dev"

[dependencies]
lazy_static = "0.2.2"
libc = "^0.1.8"
log = "^0.3.1"

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[[example]]
name = "platform"
path = "examples/platform/main.rs"

[lib]
name = "opencl"
